front end change to test post

--- a/public/add-post/index.html
+++ b/public/add-post/index.html
@@ -7,9 +7,11 @@
     <script defer src="./main.js"></script>
   </head>
   <body>
-    <input type="email" class="email" placeholder="pic" />
-    <input type="text" class="name" placeholder="name" />
-    <input type="text" class="id" placeholder="id" />
-    <button class="btn">SUBMIT</button>
+    <form class="form">
+      <input name="username" type="text" class="name" placeholder="name" />
+      <input name="user_pic" type="text" class="id" placeholder="id" />
+      <button type="submit" class="btn">SUBMIT</button>
+      <input type="file" class="file" />
+    </form>
   </body>
 </html>
